[gd_scene load_steps=4 format=3 uid="uid://dl5q7s00033ll"]

[ext_resource type="Script" path="res://edit/edit.gd" id="1_ar7dj"]
[ext_resource type="Script" path="res://edit/utility/grid.gd" id="3_12bdu"]

[sub_resource type="Resource" id="Resource_n8fdf"]
script = ExtResource("3_12bdu")
unit_left = 0.0
unit_right = 0.0
unit_bottom = 0.0
unit_top = 192.0
pixel_left = 0.0
pixel_right = 0.0
pixel_bottom = 0.0
pixel_top = -768.0

[node name="Edit" type="Node2D"]
script = ExtResource("1_ar7dj")
grid = SubResource("Resource_n8fdf")
color_dimmed = Color(0.815686, 0.815686, 0.815686, 1)

[node name="Objects" type="CanvasGroup" parent="."]

[node name="Tempos" type="Node2D" parent="Objects"]
unique_name_in_owner = true
position = Vector2(665, 0)

[node name="Meters" type="Node2D" parent="Objects"]
unique_name_in_owner = true
position = Vector2(755, 0)

[node name="NotesFX" type="Node2D" parent="Objects"]
unique_name_in_owner = true
position = Vector2(300, 0)

[node name="NotesBT" type="Node2D" parent="Objects"]
unique_name_in_owner = true
position = Vector2(300, 0)

[node name="LasersL" type="Node2D" parent="Objects"]
unique_name_in_owner = true
position = Vector2(300, 0)

[node name="LasersR" type="Node2D" parent="Objects"]
unique_name_in_owner = true
position = Vector2(300, 0)
